--- a/src/pages/headers-and-footers/headers-and-footers.pug
+++ b/src/pages/headers-and-footers/headers-and-footers.pug
@@ -19,10 +19,8 @@ html
       })
       br
       +footer({
-        lang: 'en',
+        lang: 'ru',
       })
 
 
-    <i class="fab fa-twitter"></i>
-    <i class="fab fa-facebook-square"></i>
-    <i class="fab fa-instagram"></i>
+
