--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,11 +1,146 @@
 @import '../text-field/text-field.scss';
 
+
+
 .footer {
-  &__main-wrapper {}
+  background: #FFFFFF;
+  box-shadow: 0px 10px 20px $dark5;
 
-  &__widgets {}
+  &__main-wrapper {
+    padding: 100px 140px;
+    display: flex;
+    justify-content: space-between;
+    flex-flow: wrap;
+  }
 
-  &__wrapper {}
+  &__info {
+    width: 260px;
+  }
+
+  &__info-logo {}
+
+  &__info-title {
+    margin-top: 17px;
+  }
+
+  &__info-title,
+  &__subscribe-info {
+    font-family: $montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    color: $dark75;
+  }
+
+  &__nav {
+    width: 81px;
+    margin-top: 5px;
+  }
+
+  &__nav-title,
+  &__about-title,
+  &__support-title,
+  &__subscribe-title {
+    font-family: $montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 15px;
+    text-transform: uppercase;
+    color: $dark100;
+  }
+
+  &__nav-item,
+  &__about-item,
+  &__support-item {
+    margin-top: 20px;
+  }
+
+  &__nav-link,
+  &__about-link,
+  &__support-link {
+    font-family: $montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    color: $dark50;
+    text-decoration: none;
+  }
+
+  &__nav-link:hover,
+  &__about-link:hover,
+  &__support-link:hover {
+    color: $dark75;
+  }
+
+  &__about {
+    width: 84px;
+    margin-top: 5px;
+  }
+
+  &__about-title {}
+
+  &__about-item {}
+
+  &__about-link {}
+
+  &__support {
+    width: 113px;
+    margin-top: 5px;
+  }
+
+  &__support-title {}
+
+  &__support-item {}
+
+  &__support-link {}
+
+  &__subscribe {
+    width: 267px;
+    margin-top: 5px;
+  }
+
+  &__subscribe-title {}
+
+  &__subscribe-info {
+    margin-top: 21px;
+  }
+
+  &__subscribe-input {
+    margin-top: 20px;
+  }
+
+  &__wrapper {
+    padding: 23px 140px;
+    display: flex;
+    justify-content: space-between;
+  }
 
   &__copyright {}
+
+  &__icons {
+    display: flex;
+    justify-content: space-between;
+    width: 9.6552%;
+  }
 }
+
+
+.fab {
+  font-size: 24px;
+  line-height: 23px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  text-decoration: none;
+  color: $purple;
+
+}
+
+.fa-twitter {}
+
+.fa-facebook-square {}
+
+.fa-instagram {}
