started form-elements page

--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -26,5 +26,69 @@ html
     script(src='../jquery-for-parcel.js')
     script(src='./form-elements.js')
   body
-    div(style="height: 500px; display: flex; justify-content: center; align-items: center;")
-      +filter-date-dropdown()
+    .form-elements__content
+      .form-elements__logo
+      .form-elements__main-wrapper
+        .form-elements__left-wrapper
+          .form-elements__text-field
+            .form-elements__text-field-info
+              p.form-elements__text-field-title
+              p.form-elements__text-field-description
+            .form-elements__text-field-element
+            .form-elements__text-field-info
+              p.form-elements__text-field-title
+              p.form-elements__text-field-description
+            .form-elements__text-field-element
+          .form-elements__dropdown
+            .form-elements__dropdown-info
+              p.form-elements__dropdown-title
+              p.form-elements__dropdown-description
+            .form-elements__dropdown-element
+          .form-elements__masked-text-field
+            .form-elements__masked-text-field-info
+              p.form-elements__masked-text-field-title
+              p.form-elements__masked-text-field-description
+            .form-elements__masked-text-field-element
+          .form-elements__filter-date-dropdown
+            p.form-elements__filter-date-dropdown-title
+            .form-elements__filter-date-dropdown-element
+          .form-elements__date-dropdown
+            p.form-elements__date-dropdown-title
+            .form-elements__date-dropdown-element
+          .form-elements__dropdown
+            .form-elements__dropdown-info
+              p.form-elements__dropdown-title
+              p.form-elements__dropdown-description
+          .form-elements__dropdown-field
+            .form-elements__dropdown-field-info
+              p.form-elements__dropdown-field-title
+              p.form-elements__dropdown-field-description
+          .form-elements__expandable-checkbox-list
+          .form-elements__expandable-checkbox-list
+
+        .form-elements__center-wrapper
+          .form-elements__checkbox-buttons
+          .form-elements__radio-buttons
+            .form-elements__radio-buttons-title
+            .form-elements__radio-buttons-element
+          .form-elements__toggle
+            .form-elements__toggle-title
+            .form-elements__toggle-element
+            .form-elements__toggle-element
+          .form-elements__like-button
+            .form-elements__like-button-title
+            .form-elements__like-button-element
+            .form-elements__like-button-element
+          .form-elements__rate-button
+            .form-elements__rate-button-title
+            .form-elements__rate-button-element
+            .form-elements__rate-button-element
+          .form-elements__dropdown
+            .form-elements__dropdown-title
+            .form-elements__dropdown-element
+          .form-elements__rich-checkbox-buttons
+
+        .form-elements__right-wrapper
+        .form-elements__bottom-wrapper
+          .form-elements__room-info
+          .form-elements__comment
