continue form-elements page
added structure and empty scss rules

--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -65,7 +65,6 @@ html
               p.form-elements__dropdown-field-description
           .form-elements__expandable-checkbox-list
           .form-elements__expandable-checkbox-list
-
         .form-elements__center-wrapper
           .form-elements__checkbox-buttons
           .form-elements__radio-buttons
@@ -87,8 +86,26 @@ html
             .form-elements__dropdown-title
             .form-elements__dropdown-element
           .form-elements__rich-checkbox-buttons
-
         .form-elements__right-wrapper
+          .form-elements__slider
+          .form-elements__buttons
+            .form-elements__common-button
+              .form-elements__common-button_normal
+              .form-elements__common-button_hover
+            .form-elements__transparent-button
+              .form-elements__transparent-button_normal
+              .form-elements__transparent-button_hover
+            .form-elements__button-with-no-border
+              .form-elements__button-with-no-border_normal
+              .form-elements__button-with-no-border_hover
+            .form-elements__button-wide
+            .form-elements__pagination
+              .form-elements__pagination-title
+              .form-elements__pagination-element
+            .form-elements__dropdown
+              .form-elements__dropdown-title
+              .form-elements__dropdown-element
+            .form-elements__bullet-list
         .form-elements__bottom-wrapper
           .form-elements__room-info
           .form-elements__comment
