--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -17,3 +17,135 @@
 @import '../../components/dropdown/dropdown.scss';
 @import '../../components/date-dropdown/date-dropdown.scss';
 @import '../../components/filter-date-dropdown/filter-date-dropdown.scss';
+
+&__form-elements {
+  &__content {}
+
+  &__logo {}
+
+  &__main-wrapper {}
+
+  &__left-wrapper {}
+
+  &__text-field {}
+
+  &__text-field-info {}
+
+  &__text-field-title {}
+
+  &__text-field-description {}
+
+  &__text-field-element {}
+
+  &__dropdown {}
+
+  &__dropdown-info {}
+
+  &__dropdown-title {}
+
+  &__dropdown-description {}
+
+  &__dropdown-element {}
+
+  &__masked-text-field {}
+
+  &__masked-text-field-info {}
+
+  &__masked-text-field-title {}
+
+  &__masked-text-field-description {}
+
+  &__masked-text-field-element {}
+
+  &__filter-date-dropdown {}
+
+  &__filter-date-dropdown-title {}
+
+  &__filter-date-dropdown-element {}
+
+  &__date-dropdown {}
+
+  &__date-dropdown-title {}
+
+  &__date-dropdown-element {}
+
+  &__dropdown-field {}
+
+  &__dropdown-field-info {}
+
+  &__dropdown-field-title {}
+
+  &__dropdown-field-description {}
+
+  &__expandable-checkbox-list {}
+
+  &__center-wrapper {}
+
+  &__checkbox-buttons {}
+
+  &__radio-buttons {}
+
+  &__radio-buttons-title {}
+
+  &__radio-buttons-element {}
+
+  &__toggle {}
+
+  &__toggle-title {}
+
+  &__toggle-element {}
+
+  &__like-button {}
+
+  &__like-button-title {}
+
+  &__like-button-element {}
+
+  &__rate-button {}
+
+  &__rate-button-title {}
+
+  &__rate-button-element {}
+
+  &__rich-checkbox-buttons {}
+
+  &__right-wrapper {}
+
+  &__slider {}
+
+  &__buttons {}
+
+  &__common-button {}
+
+  &__common-button_normal {}
+
+  &__common-button_hover {}
+
+  &__transparent-button {}
+
+  &__transparent-button_normal {}
+
+  &__transparent-button_hover {}
+
+  &__button-with-no-border {}
+
+  &__button-with-no-border_normal {}
+
+  &__button-with-no-border_hover {}
+
+  &__button-wide {}
+
+  &__pagination {}
+
+  &__pagination-title {}
+
+  &__pagination-element {}
+
+  &__bullet-list {}
+
+  &__bottom-wrapper {}
+
+  &__room-info {}
+
+  &__comment {}
+}
