--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -1,6 +1,6 @@
 mixin dropdown(options)
   .dropdown
-    .iqdropdown
+    .iqdropdown(data-title= options.textNull, data-mask= options.mask)
       p.iqdropdown-selection
       .iqdropdown-menu
         each val in options.items
