--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -196,24 +196,101 @@ html
             +richCheckboxButtons()
         .form-elements__right-wrapper
           .form-elements__slider
+            +slider({
+              footer: '',
+            })
           .form-elements__buttons
+            .form-elements__buttons-title Buttons
             .form-elements__common-button
               .form-elements__common-button_normal
+                +button({
+                  text: 'Click me', 
+                  isRegister: 'false',
+                  isRegisterRus: 'false',
+                  isWithArrow: 'false',
+                  transparent: 'false',
+                  isNoBorder: 'false',
+                })
               .form-elements__common-button_hover
+                +button({
+                  text: 'Click me', 
+                  isRegister: 'false',
+                  isRegisterRus: 'false',
+                  isWithArrow: 'false',
+                  transparent: 'false',
+                  isNoBorder: 'false',
+                })
             .form-elements__transparent-button
               .form-elements__transparent-button_normal
+                +button({
+                  text: 'Click me', 
+                  isRegister: 'false',
+                  isRegisterRus: 'false',
+                  isWithArrow: 'false',
+                  transparent: 'true',
+                  isNoBorder: 'false',
+                })
               .form-elements__transparent-button_hover
+                +button({
+                  text: 'Click me', 
+                  isRegister: 'false',
+                  isRegisterRus: 'false',
+                  isWithArrow: 'false',
+                  transparent: 'true',
+                  isNoBorder: 'false',
+                })
             .form-elements__button-with-no-border
               .form-elements__button-with-no-border_normal
+                +button({
+                  text: 'Click me', 
+                  isRegister: 'false',
+                  isRegisterRus: 'false',
+                  isWithArrow: 'false',
+                  transparent: 'false',
+                  isNoBorder: 'true',
+                })
               .form-elements__button-with-no-border_hover
+                +button({
+                  text: 'Click me', 
+                  isRegister: 'false',
+                  isRegisterRus: 'false',
+                  isWithArrow: 'false',
+                  transparent: 'false',
+                  isNoBorder: 'true',
+                })
             .form-elements__button-wide
+              +button({
+                  text: 'Перейти к оплате', 
+                  isRegister: 'false',
+                  isRegisterRus: 'false',
+                  isWithArrow: 'true',
+                  transparent: 'false',
+                  isNoBorder: 'false',
+                })
             .form-elements__pagination
-              .form-elements__pagination-title
+              .form-elements__pagination-title Pagination
               .form-elements__pagination-element
+                +pagination()
             .form-elements__dropdown
-              .form-elements__dropdown-title
+              .form-elements__dropdown-title dropdown
               .form-elements__dropdown-element
+                +dropdown({
+                textNull: 'Сколько гостей',
+                items: dropArrayGuests,
+                mask: maskArrGuests,
+              })
             .form-elements__bullet-list
+              .form-elements__bullet-list-title bullet list
+              .form-elements__bullet-list-element
+                +bulletList()
         .form-elements__bottom-wrapper
           .form-elements__room-info
+            +room-info()
           .form-elements__comment
+            +comment({
+              text: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.',
+              userName: 'Мурад Сарафанов',
+              lastActivity: '5 дней назад',
+              likeCount: '12',
+              imageUrl: '../../images/form-elements/image.png',
+            })
